--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
       <div id="mask"></div>
     </header>
 
-    <h2>SPICY<br>CURRY</h2>
-    <p>This is <span>"The Best Curry"</span> made with <br>12 types of spicies and plenty of <br>seasonal vegitables. <br>You can eat this <span>"Only Here"</span>. </p>
+    <div class="text">
+      <h2>SPICY<br>CURRY</h2>
+      <p>This is <span>"The Best Curry"</span> made with <br>12 types of spicies and plenty of <br>seasonal vegitables. <br>You can eat this <span>"Only Here"</span>. </p>
+    </div>
+    
   </section>
 
   <main>
